Include settings defined in plugins in MapperServiceTestCase#createMapperService