@@ -26,6 +26,7 @@ import org.elasticsearch.xpack.logsdb.patternedtext.PatternedTextFieldType;
 
 import java.util.ArrayList;
 import java.util.Collection;
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 
@@ -93,7 +94,11 @@ public class LogsDBPlugin extends Plugin implements ActionPlugin, MapperPlugin {
 
     @Override
     public List<Setting<?>> getSettings() {
-        return List.of(FALLBACK_SETTING, CLUSTER_LOGSDB_ENABLED, LOGSDB_PRIOR_LOGS_USAGE);
+        List<Setting<?>> settings = new ArrayList<>(List.of(FALLBACK_SETTING, CLUSTER_LOGSDB_ENABLED, LOGSDB_PRIOR_LOGS_USAGE));
+        if (PatternedTextFieldMapper.PATTERNED_TEXT_MAPPER.isEnabled()) {
+            settings.add(PatternedTextFieldMapper.PATTERNED_TEXT_FALLBACK_SETTING);
+        }
+        return Collections.unmodifiableList(settings);
     }
 
     @Override
